--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,17 @@
-rootProject.name = "Jetpack Compose Chat Application"
-include ':app'
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "AiChat"
+include(":app")
